--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\natem\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+    "python.pythonPath": "c:\\Users\\natem\\dev\\2048.py\\2048_phthon\\venv\\Scripts\\python.exe"
 }
